--- a/css/header-nav.css
+++ b/css/header-nav.css
@@ -136,15 +136,18 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  height: fit-content;
+  height: 3.75rem;
+  opacity: 0.9;
   width: auto;
   border-radius: 15px 15px 0 0;
   z-index: 1000;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-  transition: height 0.3s, opacity 0.3s;
+  transition: height 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
 .vertical-nav:hover {
+  height: 4.5rem;
+  opacity: 1;
   width: auto;
 }
 
@@ -156,8 +159,8 @@
   content: attr(data-tooltip);
   position: absolute;
   left: 50%;
-  bottom: 100%; /* changed from top: 55% */
-  transform: translateX(-50%); /* changed from translateY(-55%) */
+  bottom: 100%;
+  transform: translateX(-50%);
   background-color: #000000;
   color: #f5f5f5;
   padding: 0.5rem 1rem;
@@ -206,7 +209,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0.75rem; /* adjusted padding to be equal on all sides */
+  padding: 0.75rem;
   border-radius: 25px;
   transition: background-color 500ms, color 500ms, border-radius 500ms;
 }
@@ -289,7 +292,7 @@
   }
 
   main {
-    margin-left: 0; /* Remove margin that was pushing content */
+    margin-left: 0;
   }
 }
 
@@ -319,7 +322,7 @@
     grid-template-columns: auto 1fr auto;
     align-items: center;
     padding: 0.5rem 1rem;
-    height: auto(v); /* ensure header height adjusts dynamically */
+    height: auto(v);
   }
 
   .header .logo {
@@ -378,9 +381,33 @@
   .vertical-nav {
     width: auto;
     padding: 0.5rem;
+    height: 3.5rem;
+    transition: all 0.3s ease;
   }
 
   .vertical-nav:hover {
+    width: auto;
+    height: 4.25rem;
+    opacity: 1;
+  }
+
+  .vertical-nav ul li a {
+    padding: 0.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .vertical-nav {
+    width: auto;
+    height: 3rem;
+    opacity: 0.9;
+    border-radius: 10px 10px 0 0;
+    transition: all 0.3s ease;
+  }
+
+  .vertical-nav:hover {
+    height: 3.75rem;
+    opacity: 1;
     width: auto;
   }
 }
@@ -389,10 +416,15 @@
 @media (max-width: 480px) and (orientation: portrait) {
   .vertical-nav {
     width: auto;
+    height: 3rem;
+    opacity: 0.9;
     border-radius: 10px 10px 0 0;
+    transition: height 300ms ease-in-out, opacity 300ms ease-in-out;
   }
 
   .vertical-nav:hover {
+    height: 3.75rem;
+    opacity: 1;
     width: auto;
   }
 }
