--- a/css/home.css
+++ b/css/home.css
@@ -91,17 +91,14 @@
 
 /* home right */
 .big-text {
-  font-size: 8rem;
+  font-size: 120px;
   font-family: "Hongmengti", sans-serif;
   font-style: italic;
   color: #00000056;
   position: absolute;
-  top: -3%;
-  left: 12%;
+  top: -1%;
+  left: 18%;
   z-index: 1;
-  width: 100%;
-  overflow: hidden;
-  padding-right: 2rem;
 }
 
 .home-right {
@@ -150,43 +147,25 @@
   top: 50%;
   transform: translateY(-50%);
   width: 45%;
-  height: 75%;
+  height: auto;
   padding: 1rem;
   z-index: 3;
   color: white;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  background-color: #262626;
-  border-radius: 2rem;
 }
 
 .comments-box p {
-  margin-bottom: 1.5rem;
-  line-height: 1.5;
+  margin-bottom: 1rem;
+  line-height: 1.25;
+  font-size: 0.85rem;
 }
 
 .comments-box p span {
   display: block;
   font-weight: bold;
-  margin-top: 0.5rem;
-}
-
-.comments-box p:last-child {
-  margin-bottom: 0;
-}
-
-.comments-box::-webkit-scrollbar {
-  width: 0.5rem;
-}
-
-.comments-box::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.comments-box::-webkit-scrollbar-thumb {
-  background-color: rgba(63, 63, 63, 0.5);
-  border-radius: 3px;
+  margin-top: 0.25rem;
+  font-size: 0.8rem;
 }
 
 .shape-highlight {
@@ -249,10 +228,9 @@
     top: auto;
     transform: none;
     width: 55%;
-    max-height: 300px;
+    height: auto;
     margin: 0;
-    padding: 0.5rem;
-    overflow-y: auto;
+    padding: 1.5rem;
     color: #000000;
     background-color: transparent;
     align-self: center;
@@ -349,13 +327,8 @@
   .comments-box {
     width: 90%;
     height: auto;
-    max-height: none;
-    overflow-y: visible;
-    text-align: left;
-    margin: 0.5rem auto;
     padding: 1.5rem;
-    position: relative;
-    transform: none;
+    margin: 0.5rem auto;
   }
 
   .comments-box p {
